--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -22,5 +22,11 @@ main {
 }
 
 section {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    width: 100%;
+  }
 }
