--- a/src/styles/components/_homePage.scss
+++ b/src/styles/components/_homePage.scss
@@ -1,6 +1,6 @@
 .home-page {
   display: flex;
-  align-items: flex-start; /* Pour aligner le contenu au-dessus de la navigation */
+  // align-items: flex-start; /* Pour aligner le contenu au-dessus de la navigation */
 
   section {
     height: 100vh; /* 100% de la hauteur de la fenêtre */
@@ -9,5 +9,6 @@
     align-items: center;
     font-size: 24px;
     background-color: #f0f0f0;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 }
