--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -21,9 +21,9 @@ main {
   float: right;
 }
 
-section {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+// section {
+//   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+// }
 
 @media screen and (max-width: 768px) {
   main {
