--- a/src/styles/components/_homePage.scss
+++ b/src/styles/components/_homePage.scss
@@ -1,5 +1,5 @@
 .home-page {
-  display: flex;
+  // display: flex;
   // align-items: flex-start; /* Pour aligner le contenu au-dessus de la navigation */
 
   section {
