--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,6 @@
 @use "./components/homePage";
 @use "./components/sideBar";
 @use "./components/profile";
-@use "./components/section1";
+@use "./components/homeSection1";
 @use "./components/navBar";
 @use "./components/backToTopButton";
