--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -9,18 +9,25 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
-}
+  
+  .ul-navbar {
+    padding: 1rem;
+    background-color: #fff;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: 10;
+    align-items: center;
+    border-radius: 0.5rem;
+    // min-width: 150px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-.ul-navbar {
-  padding: 1rem;
-  background-color: #fff;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  z-index: 10;
-  align-items: center;
-  min-width: 150px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    img {
+      // display: flex;
+      // justify-content: center;
+      width: 40px;
+    }
+  }
 }
 
 /* Styles pour la barre de navigation en version mobile (largeur d'écran <= 768px) */
