--- a/src/styles/components/_navBar.scss
+++ b/src/styles/components/_navBar.scss
@@ -12,20 +12,34 @@
   
   .ul-navbar {
     padding: 1rem;
-    background-color: #fff;
-    width: 100%;
+    // background-color: #fff;
+    // background-color: rgba(255, 255, 255, 0.8); /* Couleur avec opacité */
     display: flex;
     justify-content: center;
-    z-index: 10;
+    // z-index: 10;
     align-items: center;
     border-radius: 0.5rem;
     // min-width: 150px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    max-width: 120px;
+    // box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
-    img {
-      // display: flex;
-      // justify-content: center;
-      width: 40px;
+    ul {
+
+      li {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        background-color: #ebebeb;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+        z-index: 100;
+        
+        img {
+          max-width: 60px;
+        }
+      }
     }
   }
 }
